--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="friends.html">Friends</a>
+                        <a class="nav-link" href="pictures.html">Pictures</a>
                     </li>
                 </ul>
             </div>
