--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
    <footer class="bg-dark text-light text-center py-4" aria-labelledby="footer-contact">
   <h2 id="footer-contact" class="h4 mb-4">Let's Connect</h2>
   <p>Interested in working together? Drop me a message anytime.</p>
-  <p class="mb-1">📧 <a href="mailto:tchennupati@albany.edu">tchennupati@albany.edu</a></p>
+  <p class="mb-1">📧 <a href="mailto:tchennupati@albany.edu" class="text-light">tchennupati@albany.edu</a></p>
   <p class="small mb-0">&copy; 2025 Taraka Chennupati. All rights reserved.</p>
 </footer>
   
