--- a/aboutme.html
+++ b/aboutme.html
@@ -140,7 +140,7 @@
     <main class="container mt-4">
         <section class="profile-section">
             <div>
-                <img src="profile.jpg" alt="Profile photo of Taraka Chennupati" class="profile-img">
+                <img src="pictures/profile.jpg" alt="Profile photo of Taraka Chennupati" class="profile-img">
             </div>
             <div>
                 <h1>About Me</h1>
